Modified Notebook Examples

--- a/Notebooks/BitFlip.ipynb
+++ b/Notebooks/BitFlip.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55d138abade041a4a19afc5a14850582",
+       "model_id": "4a8db075ff994ec78127836598b46d62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e57ba1462cb47769092c9a875310446",
+       "model_id": "72c3ece277c44ac68c582a29cb93549c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\masch\\Quantum Computing\\QComp\\pgmpy\\pgmpy\\extern\\tabulate.py:282: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\masch\\QuantumComputing\\QCompMAS\\pgmpy\\pgmpy\\extern\\tabulate.py:282: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  n = conv(string)\n"
      ]
     }
@@ -63,7 +63,7 @@
    "source": [
     "# Comment out these lines\n",
     "import sys\n",
-    "sys.path.insert(0, 'C:\\\\Users\\\\masch\\\\Quantum Computing\\\\QComp\\\\pgmpy')\n",
+    "sys.path.insert(0, 'C:\\\\Users\\\\masch\\\\QuantumComputing\\\\QCompMAS\\\\pgmpy')\n",
     "\n",
     "# Imports\n",
     "import cmath\n",
@@ -166,7 +166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a897145c26c74152a01a67468b2a4761",
+       "model_id": "de09d83d42fc4050bf3783bb6a46a46c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,7 +180,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0082c10704d74e1f9728f5974ac268ed",
+       "model_id": "4a7c944d42784d42a045ae25ac8a37cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -195,25 +195,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------+-------+---------+---------------------+\n",
-      "| q1m1    | rv    | q0m1    |   phi(q1m1,rv,q0m1) |\n",
-      "+=========+=======+=========+=====================+\n",
-      "| q1m1(0) | rv(0) | q0m1(0) |      0.4243+0.0000j |\n",
-      "+---------+-------+---------+---------------------+\n",
-      "| q1m1(0) | rv(0) | q0m1(1) |      0.4243+0.0000j |\n",
-      "+---------+-------+---------+---------------------+\n",
-      "| q1m1(0) | rv(1) | q0m1(0) |      0.0000+0.0000j |\n",
-      "+---------+-------+---------+---------------------+\n",
-      "| q1m1(0) | rv(1) | q0m1(1) |      0.0000+0.0000j |\n",
-      "+---------+-------+---------+---------------------+\n",
-      "| q1m1(1) | rv(0) | q0m1(0) |      0.0000+0.0000j |\n",
-      "+---------+-------+---------+---------------------+\n",
-      "| q1m1(1) | rv(0) | q0m1(1) |      0.0000+0.0000j |\n",
-      "+---------+-------+---------+---------------------+\n",
-      "| q1m1(1) | rv(1) | q0m1(0) |      0.5657+0.0000j |\n",
-      "+---------+-------+---------+---------------------+\n",
-      "| q1m1(1) | rv(1) | q0m1(1) |      0.5657+0.0000j |\n",
-      "+---------+-------+---------+---------------------+\n"
+      "+---------+---------+-------+---------------------+\n",
+      "| q0m1    | q1m1    | rv    |   phi(q0m1,q1m1,rv) |\n",
+      "+=========+=========+=======+=====================+\n",
+      "| q0m1(0) | q1m1(0) | rv(0) |      0.4243+0.0000j |\n",
+      "+---------+---------+-------+---------------------+\n",
+      "| q0m1(0) | q1m1(0) | rv(1) |      0.0000+0.0000j |\n",
+      "+---------+---------+-------+---------------------+\n",
+      "| q0m1(0) | q1m1(1) | rv(0) |      0.0000+0.0000j |\n",
+      "+---------+---------+-------+---------------------+\n",
+      "| q0m1(0) | q1m1(1) | rv(1) |      0.5657+0.0000j |\n",
+      "+---------+---------+-------+---------------------+\n",
+      "| q0m1(1) | q1m1(0) | rv(0) |      0.4243+0.0000j |\n",
+      "+---------+---------+-------+---------------------+\n",
+      "| q0m1(1) | q1m1(0) | rv(1) |      0.0000+0.0000j |\n",
+      "+---------+---------+-------+---------------------+\n",
+      "| q0m1(1) | q1m1(1) | rv(0) |      0.0000+0.0000j |\n",
+      "+---------+---------+-------+---------------------+\n",
+      "| q0m1(1) | q1m1(1) | rv(1) |      0.5657+0.0000j |\n",
+      "+---------+---------+-------+---------------------+\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "238b2a30",
    "metadata": {},
    "outputs": [
@@ -242,15 +242,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.18+0.j 0.  +0.j 0.18+0.j 0.  +0.j]\n",
-      " [0.  +0.j 0.32+0.j 0.  +0.j 0.32+0.j]\n",
-      " [0.18+0.j 0.  +0.j 0.18+0.j 0.  +0.j]\n",
-      " [0.  +0.j 0.32+0.j 0.  +0.j 0.32+0.j]]\n"
+      "[[0.18+0.j 0.18+0.j 0.  +0.j 0.  +0.j]\n",
+      " [0.18+0.j 0.18+0.j 0.  +0.j 0.  +0.j]\n",
+      " [0.  +0.j 0.  +0.j 0.32+0.j 0.32+0.j]\n",
+      " [0.  +0.j 0.  +0.j 0.32+0.j 0.32+0.j]]\n"
      ]
     }
    ],
    "source": [
-    "X = cpd_2_dm(bf2,['rv'],['q0m1', 'q1m1']).round(4)\n",
+    "X = cpd_2_dm(bf2,['rv'],['q1m1', 'q0m1']).round(4)\n",
     "print(X)"
    ]
   },
