--- a/Notebooks/CorrelatedBitFlip.ipynb
+++ b/Notebooks/CorrelatedBitFlip.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "ab7b7462",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b33d0f2070db458fb09e316dcc0502fc",
+       "model_id": "1f859ce424044248908843a4ee51feb8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "732fdf9ba10d4857a9f554f5329ed43e",
+       "model_id": "501e62c3edd044af94eb90506ffe2241",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,48 +38,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2    | q1m1    | rv1    | q0m1    |   phi(rv2,q1m1,rv1,q0m1) |\n",
-      "+========+=========+========+=========+==========================+\n",
-      "| rv2(0) | q1m1(0) | rv1(0) | q0m1(0) |           0.9000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(0) | rv1(0) | q0m1(1) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(0) | rv1(1) | q0m1(0) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(0) | rv1(1) | q0m1(1) |           0.2646+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(1) | rv1(0) | q0m1(0) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(1) | rv1(0) | q0m1(1) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(1) | rv1(1) | q0m1(0) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(1) | rv1(1) | q0m1(1) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(0) | rv1(0) | q0m1(0) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(0) | rv1(0) | q0m1(1) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(0) | rv1(1) | q0m1(0) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(0) | rv1(1) | q0m1(1) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(1) | rv1(0) | q0m1(0) |           0.3000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(1) | rv1(0) | q0m1(1) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(1) | rv1(1) | q0m1(0) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(1) | rv1(1) | q0m1(1) |           0.1732+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n"
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1    | rv1    | rv2    | q1m1    |   phi(q0m1,rv1,rv2,q1m1) |\n",
+      "+=========+========+========+=========+==========================+\n",
+      "| q0m1(0) | rv1(0) | rv2(0) | q1m1(0) |           0.9000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(0) | rv1(0) | rv2(0) | q1m1(1) |           0.0000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(0) | rv1(0) | rv2(1) | q1m1(0) |           0.0000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(0) | rv1(0) | rv2(1) | q1m1(1) |           0.3000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(0) | rv1(1) | rv2(0) | q1m1(0) |           0.0000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(0) | rv1(1) | rv2(0) | q1m1(1) |           0.0000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(0) | rv1(1) | rv2(1) | q1m1(0) |           0.0000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(0) | rv1(1) | rv2(1) | q1m1(1) |           0.0000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(1) | rv1(0) | rv2(0) | q1m1(0) |           0.0000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(1) | rv1(0) | rv2(0) | q1m1(1) |           0.0000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(1) | rv1(0) | rv2(1) | q1m1(0) |           0.0000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(1) | rv1(0) | rv2(1) | q1m1(1) |           0.0000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(1) | rv1(1) | rv2(0) | q1m1(0) |           0.2646+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(1) | rv1(1) | rv2(0) | q1m1(1) |           0.0000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(1) | rv1(1) | rv2(1) | q1m1(0) |           0.0000+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n",
+      "| q0m1(1) | rv1(1) | rv2(1) | q1m1(1) |           0.1732+0.0000j |\n",
+      "+---------+--------+--------+---------+--------------------------+\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\masch\\QuantumComputing\\QCompMAS\\pgmpy\\pgmpy\\extern\\tabulate.py:282: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  n = conv(string)\n"
      ]
     }
    ],
    "source": [
     "# Comment out these lines\n",
     "import sys\n",
-    "sys.path.insert(0, 'C:\\\\Users\\\\masch\\\\Quantum Computing\\\\QComp\\\\pgmpy')\n",
+    "sys.path.insert(0, 'C:\\\\Users\\\\masch\\\\QuantumComputing\\\\QCompMAS\\\\pgmpy')\n",
     "\n",
     "# Imports\n",
     "import cmath\n",
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "f0603182",
    "metadata": {},
    "outputs": [],
@@ -159,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "47e49cb1",
    "metadata": {},
    "outputs": [
