--- a/Notebooks/QFT.ipynb
+++ b/Notebooks/QFT.ipynb
@@ -107,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dfa9bc26c064bf58e109be8f9c09dff",
+       "model_id": "d93d2b94842a48dea0ed2c59fef6ba11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,7 +121,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "357e66019f3a42139d520e30a4d0fca4",
+       "model_id": "5ff7e6984ef7416ba35d632842c332ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,7 +149,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\masch\\Quantum Computing\\QComp\\pgmpy\\pgmpy\\extern\\tabulate.py:282: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\masch\\QuantumComputing\\QCompMAS\\pgmpy\\pgmpy\\extern\\tabulate.py:282: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  n = conv(string)\n"
      ]
     }
@@ -157,7 +157,7 @@
    "source": [
     "# Comment out these lines\n",
     "import sys\n",
-    "sys.path.insert(0, 'C:\\\\Users\\\\masch\\\\Quantum Computing\\\\QComp\\\\pgmpy')\n",
+    "sys.path.insert(0, 'C:\\\\Users\\\\masch\\\\QuantumComputing\\\\QCompMAS\\\\pgmpy')\n",
     "\n",
     "# Imports\n",
     "import cmath\n",
@@ -280,7 +280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "517877472d23499d8ed80f89ff0cc8ef",
+       "model_id": "3b695e6a2260428fa94650beed4712d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,7 +294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffe9229eb549416eacd55667151eaa6a",
+       "model_id": "d5d8e5f3cea5413892b3bbce3e7cc6af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,7 +465,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7acdfb50a75e450a892614f54c55a1de",
+       "model_id": "3e87be6b25ef4d9e9ec9e77943958be0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,7 +479,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f3229eee2ff411980202c0bfcbd962d",
+       "model_id": "2f76b7d3af3447a58d3a8dfbdd9351d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -495,23 +495,23 @@
      "output_type": "stream",
      "text": [
       "+---------+---------+---------+-----------------------+\n",
-      "| q0m1    | q2m1    | q1m1    |   phi(q0m1,q2m1,q1m1) |\n",
+      "| q1m1    | q0m1    | q2m1    |   phi(q1m1,q0m1,q2m1) |\n",
       "+=========+=========+=========+=======================+\n",
-      "| q0m1(0) | q2m1(0) | q1m1(0) |        0.3536+0.0000j |\n",
+      "| q1m1(0) | q0m1(0) | q2m1(0) |        0.3536+0.0000j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q0m1(0) | q2m1(0) | q1m1(1) |        0.3536+0.0000j |\n",
+      "| q1m1(0) | q0m1(0) | q2m1(1) |        0.3536+0.0000j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q0m1(0) | q2m1(1) | q1m1(0) |        0.3536+0.0000j |\n",
+      "| q1m1(0) | q0m1(1) | q2m1(0) |        0.3536+0.0000j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q0m1(0) | q2m1(1) | q1m1(1) |        0.3536+0.0000j |\n",
+      "| q1m1(0) | q0m1(1) | q2m1(1) |        0.3536+0.0000j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q0m1(1) | q2m1(0) | q1m1(0) |        0.3536+0.0000j |\n",
+      "| q1m1(1) | q0m1(0) | q2m1(0) |        0.3536+0.0000j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q0m1(1) | q2m1(0) | q1m1(1) |        0.3536+0.0000j |\n",
+      "| q1m1(1) | q0m1(0) | q2m1(1) |        0.3536+0.0000j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q0m1(1) | q2m1(1) | q1m1(0) |        0.3536+0.0000j |\n",
+      "| q1m1(1) | q0m1(1) | q2m1(0) |        0.3536+0.0000j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q0m1(1) | q2m1(1) | q1m1(1) |        0.3536+0.0000j |\n",
+      "| q1m1(1) | q0m1(1) | q2m1(1) |        0.3536+0.0000j |\n",
       "+---------+---------+---------+-----------------------+\n"
      ]
     }
@@ -560,7 +560,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['q0m1', 'q2m1', 'q1m1']\n",
+      "['q1m1', 'q0m1', 'q2m1']\n",
       "[[[0.35355339+0.j 0.35355339+0.j]\n",
       "  [0.35355339+0.j 0.35355339+0.j]]\n",
       "\n",
@@ -664,7 +664,7 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "{'000': (0.3536+0j), '010': (0.3536+0j), '001': (0.3536+0j), '011': (0.3536+0j), '100': (0.3536+0j), '110': (0.3536+0j), '101': (0.3536+0j), '111': (0.3536+0j)}\n",
+      "{'000': (0.3536+0j), '001': (0.3536+0j), '100': (0.3536+0j), '101': (0.3536+0j), '010': (0.3536+0j), '011': (0.3536+0j), '110': (0.3536+0j), '111': (0.3536+0j)}\n",
       "{'000': (0.3536+0j), '100': (0.3536+0j), '010': (0.3536+0j), '110': (0.3536+0j), '001': (0.3536+0j), '101': (0.3536+0j), '011': (0.3536+0j), '111': (0.3536+0j)}\n"
      ]
     }
