--- a/Notebooks/SimonAlg.ipynb
+++ b/Notebooks/SimonAlg.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "# Comment out these lines\n",
     "import sys\n",
-    "sys.path.insert(0, 'C:\\\\Users\\\\masch\\\\Quantum Computing\\\\QComp\\\\pgmpy')\n",
+    "sys.path.insert(0, 'C:\\\\Users\\\\masch\\\\QuantumComputing\\\\QCompMAS\\\\pgmpy')\n",
     "\n",
     "# Imports (some imports may not be necessary)\n",
     "import numpy as np\n",
@@ -233,7 +233,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "655b76c05c684a3c9012041a26a19074",
+       "model_id": "56e5905fea5d422db1dbcda00dec0b33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f49dbb1963a74044aef84a02420392b1",
+       "model_id": "ff56e883d09f4dc7a85030297343e661",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,39 +263,39 @@
      "output_type": "stream",
      "text": [
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3    | q0m3    | q2m2    | q3m2    |   phi(q1m3,q0m3,q2m2,q3m2) |\n",
+      "| q3m2    | q1m3    | q2m2    | q0m3    |   phi(q3m2,q1m3,q2m2,q0m3) |\n",
       "+=========+=========+=========+=========+============================+\n",
-      "| q1m3(0) | q0m3(0) | q2m2(0) | q3m2(0) |             0.5000+0.0000j |\n",
+      "| q3m2(0) | q1m3(0) | q2m2(0) | q0m3(0) |             0.5000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(0) | q0m3(0) | q2m2(0) | q3m2(1) |             0.0000+0.0000j |\n",
+      "| q3m2(0) | q1m3(0) | q2m2(0) | q0m3(1) |             0.0000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(0) | q0m3(0) | q2m2(1) | q3m2(0) |             0.0000+0.0000j |\n",
+      "| q3m2(0) | q1m3(0) | q2m2(1) | q0m3(0) |             0.0000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(0) | q0m3(0) | q2m2(1) | q3m2(1) |             0.5000+0.0000j |\n",
+      "| q3m2(0) | q1m3(0) | q2m2(1) | q0m3(1) |             0.0000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(0) | q0m3(1) | q2m2(0) | q3m2(0) |             0.0000+0.0000j |\n",
+      "| q3m2(0) | q1m3(1) | q2m2(0) | q0m3(0) |             0.0000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(0) | q0m3(1) | q2m2(0) | q3m2(1) |             0.0000+0.0000j |\n",
+      "| q3m2(0) | q1m3(1) | q2m2(0) | q0m3(1) |             0.5000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(0) | q0m3(1) | q2m2(1) | q3m2(0) |             0.0000+0.0000j |\n",
+      "| q3m2(0) | q1m3(1) | q2m2(1) | q0m3(0) |             0.0000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(0) | q0m3(1) | q2m2(1) | q3m2(1) |             0.0000+0.0000j |\n",
+      "| q3m2(0) | q1m3(1) | q2m2(1) | q0m3(1) |             0.0000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(1) | q0m3(0) | q2m2(0) | q3m2(0) |             0.0000+0.0000j |\n",
+      "| q3m2(1) | q1m3(0) | q2m2(0) | q0m3(0) |             0.0000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(1) | q0m3(0) | q2m2(0) | q3m2(1) |             0.0000+0.0000j |\n",
+      "| q3m2(1) | q1m3(0) | q2m2(0) | q0m3(1) |             0.0000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(1) | q0m3(0) | q2m2(1) | q3m2(0) |             0.0000+0.0000j |\n",
+      "| q3m2(1) | q1m3(0) | q2m2(1) | q0m3(0) |             0.5000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(1) | q0m3(0) | q2m2(1) | q3m2(1) |             0.0000+0.0000j |\n",
+      "| q3m2(1) | q1m3(0) | q2m2(1) | q0m3(1) |             0.0000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(1) | q0m3(1) | q2m2(0) | q3m2(0) |             0.5000+0.0000j |\n",
+      "| q3m2(1) | q1m3(1) | q2m2(0) | q0m3(0) |             0.0000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(1) | q0m3(1) | q2m2(0) | q3m2(1) |             0.0000+0.0000j |\n",
+      "| q3m2(1) | q1m3(1) | q2m2(0) | q0m3(1) |             0.0000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(1) | q0m3(1) | q2m2(1) | q3m2(0) |             0.0000+0.0000j |\n",
+      "| q3m2(1) | q1m3(1) | q2m2(1) | q0m3(0) |             0.0000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n",
-      "| q1m3(1) | q0m3(1) | q2m2(1) | q3m2(1) |            -0.5000+0.0000j |\n",
+      "| q3m2(1) | q1m3(1) | q2m2(1) | q0m3(1) |            -0.5000+0.0000j |\n",
       "+---------+---------+---------+---------+----------------------------+\n"
      ]
     },
@@ -303,7 +303,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\masch\\Quantum Computing\\QComp\\pgmpy\\pgmpy\\extern\\tabulate.py:282: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\masch\\QuantumComputing\\QCompMAS\\pgmpy\\pgmpy\\extern\\tabulate.py:282: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  n = conv(string)\n"
      ]
     }
@@ -353,18 +353,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['q1m3', 'q0m3', 'q2m2', 'q3m2']\n",
+      "['q3m2', 'q1m3', 'q2m2', 'q0m3']\n",
       "[[[[ 0.5+0.j  0. +0.j]\n",
-      "   [ 0. +0.j  0.5+0.j]]\n",
+      "   [ 0. +0.j  0. +0.j]]\n",
       "\n",
-      "  [[ 0. +0.j  0. +0.j]\n",
+      "  [[ 0. +0.j  0.5+0.j]\n",
       "   [ 0. +0.j  0. +0.j]]]\n",
       "\n",
       "\n",
       " [[[ 0. +0.j  0. +0.j]\n",
-      "   [ 0. +0.j  0. +0.j]]\n",
+      "   [ 0.5+0.j  0. +0.j]]\n",
       "\n",
-      "  [[ 0.5+0.j  0. +0.j]\n",
+      "  [[ 0. +0.j  0. +0.j]\n",
       "   [ 0. +0.j -0.5+0.j]]]]\n"
      ]
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e27611cf",
    "metadata": {},
    "outputs": [
@@ -390,14 +390,6 @@
      "text": [
       "simon's algorithm\n",
       "{'0000': (0.5+0j), '1000': 0j, '0100': 0j, '1100': (0.5+0j), '0010': 0j, '1010': 0j, '0110': 0j, '1110': 0j, '0001': 0j, '1001': 0j, '0101': 0j, '1101': 0j, '0011': (0.5+0j), '1011': (-0+0j), '0111': 0j, '1111': (-0.5+0j)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-9-4a9b33c58dc7>:13: DeprecationWarning: The Python built-in `round` is deprecated for complex scalars, and will raise a `TypeError` in a future release. Use `np.round` or `scalar.round` instead.\n",
-      "  QbitDict[qbits[i]]=round(stateVec[i],4)\n"
      ]
     }
    ],
@@ -423,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c2f6b77c",
    "metadata": {},
    "outputs": [
@@ -432,16 +424,8 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "{'0000': (0.5+0j), '0001': 0j, '0010': 0j, '0011': (0.5+0j), '1000': 0j, '1001': 0j, '1010': 0j, '1011': 0j, '0100': 0j, '0101': 0j, '0110': 0j, '0111': 0j, '1100': (0.5+0j), '1101': 0j, '1110': 0j, '1111': (-0.5+0j)}\n",
-      "{'0000': (0.5+0j), '0001': 0j, '0010': 0j, '0011': (0.5+0j), '0100': 0j, '0101': 0j, '0110': 0j, '0111': 0j, '1000': 0j, '1001': 0j, '1010': 0j, '1011': 0j, '1100': (0.5+0j), '1101': (-0+0j), '1110': 0j, '1111': (-0.5+0j)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-9-4a9b33c58dc7>:13: DeprecationWarning: The Python built-in `round` is deprecated for complex scalars, and will raise a `TypeError` in a future release. Use `np.round` or `scalar.round` instead.\n",
-      "  QbitDict[qbits[i]]=round(stateVec[i],4)\n"
+      "{'0000': (0.5+0j), '1000': 0j, '0010': 0j, '1010': 0j, '0100': 0j, '1100': (0.5+0j), '0110': 0j, '1110': 0j, '0001': 0j, '1001': 0j, '0011': (0.5+0j), '1011': 0j, '0101': 0j, '1101': 0j, '0111': 0j, '1111': (-0.5+0j)}\n",
+      "{'0000': (0.5+0j), '1000': 0j, '0100': 0j, '1100': (0.5+0j), '0010': 0j, '1010': 0j, '0110': 0j, '1110': 0j, '0001': 0j, '1001': 0j, '0101': 0j, '1101': 0j, '0011': (0.5+0j), '1011': (-0+0j), '0111': 0j, '1111': (-0.5+0j)}\n"
      ]
     }
    ],
@@ -484,7 +468,7 @@
     "    columns = columnize(listOfBits)\n",
     "    rearrangedColumns = [None]*len(columns)\n",
     "    for index, order in enumerate(varOrderArr):\n",
-    "        rearrangedColumns[index] = columns[int(order)]\n",
+    "        rearrangedColumns[int(order)] = columns[int(index)]\n",
     "    numOfCols = len(rearrangedColumns)\n",
     "    bitStr = \"\"\n",
     "    finalBitArr = []\n",
